resolved liquibase problem in reading changelogs. Used json output for avg rating services. resolved autowiring problem in constructor injection. added createdAt column to feedback tables.